<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, WifidiskActivity!</string>
    <string name="app_name">WiFiDock</string>
	<string name="settingsTittle">System</string>
	<string name="setting_wifishare">WiFiDock Setting</string>
	<string name="setting_file">File Scan Setting</string>
	<string name="setting_help">Help</string>
	<string name="setting_storage">Storage</string>
	<string name="setting_guide">Guide</string>
	<string name="setting_customer">Customer</string>
	<string name="setting_power">Power</string>
	<string name="setting_router">Router</string>
	<string name="setting_hot">HotPoint</string>
	<string name="setting_mnt">UStorage</string>
	<string name="setting_share">Share</string>
	<string name="setting_local">Local Service</string>
	<string name="setting_display">Display</string>
	<string name="setting_upgrade">Upgrade</string>
	<string name="setting_web">WebSetting</string>
	<string name="setting_about">About</string>
	<string name="setting_exit">Exit</string>
	<string name="moviesTittle">Videos</string>
	<string name="musicsTittle">Musics</string>
	<string name="photosTittle">Images</string>
	<string name="filesTittle">Files</string>
	<string name="copysTittle">Backups</string>
	<string name="copy_contact">Copy Contacts</string>
	<string name="copy_photo">Copy Photos</string>
	<string name="recover_contact">Restore Contact</string>
	<string name="shouji">Address List</string>
	<string name="copy_record">Copy Records</string>
	<string name="managementTittle">Manage</string>
	<string name="statusTittle">Status</string>
	<string name="status_transfer">Transfer List</string>
	<string name="status_play">Play List</string>
	<string name="status_playing">Now Playing</string>
	<string name="saveSetting">Save</string>
	<string name="cancelSetting">Cancel</string>
	<string name="exit">EXIT</string>
	<string name="delete">Delete</string>
	<string name="copyToLocal">Copy file to Local</string>
	<string name="copyToWifiShare">Copy file to WiFi Dock local</string>
	<string name="copyToSd">Copy file to WiFi Dock SD Card</string>
	<string name="copyToMicroSd">Copy file to WiFi Dock Micro SD</string>
	<string name="shareConnectSuccessMsg">&lt;b>WiFiDock connect success!&lt;/b>&lt;br>Enjoy using wifi dock!</string>
	<string name="shareConnectFail">&lt;b>WiFiDock connect fail！&lt;/b>&lt;br>Enter offline mode!</string>
	<string name="shareConnectFailMsg">&lt;b>Failed to connect wifi_dock. Maybe you need to check the wifi setting?</string>
	<string name="noMediaMountedMsg">&lt;b>Success to connect wifi_dock,no storage is accessable!&lt;/b>&lt;br>Enter the WiFiDock?</string>
	<string name="failedToStart">Failed to start application. You may need to remove this tile and add it again from application list.</string>
	<string name="shareDisConnectMsg">WiFiDock disconnect,please check your wifi setting and start the application later!</string>
	<string name="fileDownloadMsg">Are you sure to download the file to "/mnt/sdcard/WifiStar"?</string>
	<string name="home">home</string>
	<string name="back">back</string>
	<string name="search">Search</string>
	<string name="display">Display</string>
	<string name="record">record</string>
	<string name="status">Status</string>
	<string name="edit">edit</string>
	<string name="transferList">TransferList</string>
	<string name="playList">playList</string>
	<string name="playing">playing</string>
	<string name="seletAll">SeletAll</string>
	<string name="rename">rename</string>
	<string name="newFolder">New</string>
	<string name="copy">Copy</string>
	<string name="paste">paste</string>
	<string name="addPlayList">add To PlayList</string>
    <string name="operation_cover">Cover existed file</string>
    <string name="operation_jump">Skip</string>
    <string name="operation_append2">Append (2) in the last</string>
    <string name="operation_doitassame">Do the same</string>
    <string name="operation_cancel">Cancel paste</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="scanning">scanning…</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_positive">Comfirm</string>
    <string name="btn_negative">Cancel</string>
     <string name="btn_yes">yes</string>
    <string name="btn_no">no</string>
    <string name="tip_filetype">Type:</string>
    <string name="tip_filepath">Path:</string>
    <string name="tip_include">Contains:</string>
    <string name="tip_filesize">Size:</string>
    <string name="tip_createdate">Created:</string>
    <string name="tip_modifydate">Modified:</string>
    <string name="tip_canwrite">Writeable:</string>
    <string name="tip_canread">Readable:</string>
    <string name="tip_ishide">Hidden:</string>
    <string name="tip_version">Version:</string>
    <string name="tip_empty_folder">Empty Folder</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="include">%1$s file(s),%2$s folder(s)</string>
    <string name="usbDisk">usb disk</string>
    <string name="innerDisk">internal storage</string>
    <string name="sdcard">external SD</string>
    <string name="simsdcard">internal storage</string>
    <string name="ext_sd">external SD</string>
    <string name="disc_size">Disk size : </string>
    <string name="disc_capacity">Available capacity :</string>
    <string name="sub_menu_txt">Text</string>
    <string name="sub_menu_audio">Audio</string>
    <string name="sub_menu_video">Video</string>
    <string name="sub_menu_pic">Picture</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about_us">About</string>
    <string name="menu_mode_list">List</string>
    <string name="menu_mode_grid">Gridding</string>
    <string name="title_has_same_file">Has same file in this folder</string>
    <string name="title_copying">Copying file(s)…</string>
    <string name="title_deleting">Deleting file(s)…</string>
    <string name="title_read_property">File propties</string>
    <string name="title_comfir_delete">Prompting</string>
    <string name="title_rename">Rename</string>
    <string name="title_menutitle">Menu</string>
    <string name="title_newFolder">New folder</string>
    <string name="title_in_the_top">You are in the top path</string>
    <string name="menu_open">Open</string>
    <string name="menu_play">Play</string>
    <string name="menu_open_as">Open as…</string>
    <string name="menu_endoperating">Finish Operating</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_unselect_all">Select None</string>
    <string name="menu_delete_selected">Delete</string>
    <string name="menu_delete_all">Clear Playlist</string>
    <string name="menu_copy_selected">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_cut_selected">Cut</string>
    <string name="menu_read_prop">Get Property</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_photo">Photo</string>
    <string name="start_rec">Recording</string>
    <string name="stop_rec">Stop</string>
    <string name="start_camer">OK</string>
    <string name="use_camer">use</string>
    <string name="re_camer">redo</string>
    <string name="succeed">succeed!</string>
    <string name="saving">saving...</string>
    <string name="finish_rec">Video Record ok!</string>
    <string name="choosedisk">Please select a storage device!</string>
    <string name="effectivedisk">Please select a valid storage devices!</string>
    <string name="operating_background">Operating backgrund</string>
    <string name="operating_background_complete">Operating background complete</string>
    <string name="dialog_msg_comfir_delete">Are you sure to delete the file(s)/folder(s)?</string>
     <string name="dialog_msg_comfir_delete_download">Are you sure to delete the file(s)/folder(s)?</string>
     <string name="dialog_msg_comfir_addplaylist">Are you sure to add the file(s) to PlayList?</string>
    <string name="file_browser">File Browser</string>
    <string name="music_browser">Music Browser</string>
    <string name="video_browser">Video Browser</string>
    <string name="image_browser">Image Browser</string>
    <string name="up">Up</string>
    <string name="intent_to_copy">%1$s file(s) intent to copy</string>
    <string name="intent_to_cut">%1$s file(s) intent to cut</string>
     <string name="intent_to_paste">%1$s file(s) pasting </string>
     <string name="intent_to_addplaylist">%1$s file(s) added to playlist"</string>
    <string name="toast_file_invalname">Invalid file name</string>
    <string name="toast_filesystem_readonly">Have no permission to write</string>
    <string name="toast_file_has_exist">Files exists,please try another name</string>
    <string name="toast_file_new_succeed">New folder success</string>
    <string name="toast_unknow">Error unkonw reason</string>
    <string name="toast_file_rename_succeed">Rename success!</string>
    <string name="toast_please_wait">Please wait…</string>
    <string name="toast_rename_not_support">nonsupport</string>
    <string name="toast_press_one_more_to_exit">Press again to exit!</string>
    <string name="toast_cont_open_file">Can not open %1$s</string>
    <string name="toast_can_not_find_a_suitable_program_to_open_this_file">Can not find a suitable program to open this file</string>
    <string name="toast_operation_failed">Operation failed</string>
    <string name="toast_inval_filename">Invalid file name</string>
    <string name="toast_rename_succeed">Rename success</string>
    <string name="toast_read_only_file_system">%1$s have no permission to write</string>
    <string name="toast_file_not_find">File not found</string>
    <string name="toast_new_folder_succeed">New folder success</string>
    <string name="toast_rename_or_new_folder_failed_folder_exist">Rename or new folder failed please try another name</string>
    <string name="toast_folder_limit">Can not copy file in this field</string>
    <string name="toast_cont_move_in_same_folder">Can not move in same folder</string>
    <string name="toast_operation_canceled">Operating canceled</string>
    <string name="toast_multi_operating">Multi operating…</string>
    <string name="toast_delete_complete">%1$s delete success</string>
    <string name="toast_paste_complete">Operate complete</string>
    <string name="toast_sdcard_error">SDCard is not exist or mount failed!</string>
    <string name="toast_innerDisk_error">InnerDisk is not exist or mount failed!</string>
    <string name="toast_operation_failed_sdcard_error">Operation failed,sdcard error!</string>
    <string name="toast_usbdisk_error">Operation failed,USB device error</string>
    <string name="set_guide">Setup wizard</string>
    <string name="set_wan_tip">Wan port Settings</string>
    <string name="set_adr_type">Address type</string>
    <string name="set_thank">Thank you for using WiFi Dock。  
If you are not familiar with network knowledge or router，You can easily complete set according to clew。If you are an expert，You can also directly to the menu item selected you need to modify the network parameters Settings。  
This wizard helps you quickly set working mode and basic parameters of the router。</string>
	<string name="set_pppoe">PPPoE</string>
	<string name="set_isp">Mobile ISP</string>
	<string name="set_area">Region</string>
	<string name="set_dhcp">Ethernet broadband,Automatically get the IP address（DHCP IP）</string>
	<string name="set_static">Ethernet broadband,Fixed IP address（Static IP）</string>
	<string name="set_3gnet">3G dial</string>
	<string name="set_next">next</string>
	<string name="set_save">save</string>
	<string name="set_restore">restore</string>
</resources>