<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <!--  
  <CheckBox android:id="@+id/doitasSame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/operation_doitassame"
    android:gravity="center_vertical"/>
    -->
  <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/whichOperation">
       <RadioButton
           android:text="@string/operation_cover"
           android:textColor="#000000"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/cover"/>
       <RadioButton
           android:text="@string/operation_jump"
           android:textColor="#000000"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/jump" />
       <RadioButton
           android:text="@string/operation_append2"
           android:textColor="#000000"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/append2" />
    </RadioGroup>
  	
</LinearLayout>
